--- a/index.html
+++ b/index.html
@@ -23,5 +23,8 @@ a {
 
 <h3><a href="modern_arcade/index.html">> The Modern Arcade</a></h3>
 
+<h3><a href="outsourced/index.html">> Outsourced: Conscious processing extending from body to world through intelligent artifacts</a></h3>
+
+
     </div>
 </div>
