--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@ a {
 
 <h3><a href="https://itunes.apple.com/us/app/quantum-pilot/id935956154?mt=8">> Quantum Pilot: Clone enemies remember how you killed them and fight back mirroring your attack</a></h3>
 
+<h3><a href="https://itunes.apple.com/us/app/zapbear/id1016670264">>Zap Bear: Wear Sunglasses, Dodge ϟ</a></h3>
+
 <h1>Edible Essays</h1>
 
 <h3><a href="designing_minimalist/index.html">> Designing Minimalist Interfaces For Teaching New Cognitive Tool Use</a></h3>
