--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@ a {
         <p>
         <a href="https://www.youtube.com/watch?v=tG3h_ie6K6E&feature=youtu.be&t=1m24s">Presentation: Selling Digital Goods for Ethereum With Quantum Potato Software</a>
         </p>
-        <a href="https://www.npmjs.com/package/eth-auth">npm eth-auth: Validate a user has control of their Ethereum address by decoding their signing of an authentication token.</a>
+
+        <p>
+        <a href="https://www.npmjs.com/package/eth-auth">npm eth-auth</a>Validate a user has control of their Ethereum address by decoding their signing of an authentication token.
+        </p>
 
         <a href="https://www.npmjs.com/package/eth-lawyer">npm eth-lawyer: Detect Metamask login, logout & Conveniently interact with Ethereum Smart Contracts.</a>
 
