--- a/index.html
+++ b/index.html
@@ -20,15 +20,17 @@ a {
         <p>Javascript, Solidity, Python, Ruby, Erlang, Elixir, Java, Swift</p>
         
         <h2>Crypto</h2>
-        <p>
-        <a href="https://www.youtube.com/watch?v=tG3h_ie6K6E&feature=youtu.be&t=1m24s">Presentation: Selling Digital Goods for Ethereum With Quantum Potato Software</a>
-        </p>
+        <div>
+        <a href="https://www.youtube.com/watch?v=tG3h_ie6K6E&feature=youtu.be&t=1m24s">Presentation</a>
+        <p>Selling Digital Goods for Ethereum With Quantum Potato Software</p>
+        </div>
 
-        <p>
-        <a href="https://www.npmjs.com/package/eth-auth">npm eth-auth</a>Validate a user has control of their Ethereum address by decoding their signing of an authentication token.
-        </p>
+        <div>
+        <a href="https://www.npmjs.com/package/eth-auth">npm eth-auth:</a> Validate a user has control of their Ethereum address by decoding their signing of an authentication token.
+        </div>
 
-        <a href="https://www.npmjs.com/package/eth-lawyer">npm eth-lawyer: Detect Metamask login, logout & Conveniently interact with Ethereum Smart Contracts.</a>
+        <div>
+        <a href="https://www.npmjs.com/package/eth-lawyer">npm eth-lawyer:</a> Detect Metamask login, logout & Conveniently interact with Ethereum Smart Contracts.
 
         <a href="https://github.com/quantumproductions/private-dice">Private Dice: Roll 6 sided dice to securely generate Bitcoin private key.</a>
 
