--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@ a {
         
         <h2>Crypto</h2>
         <div>
-        <a href="https://www.youtube.com/watch?v=tG3h_ie6K6E&feature=youtu.be&t=1m24s">Presentation</a>
-        <p>Selling Digital Goods for Ethereum With Quantum Potato Software</p>
+        <a href="https://www.youtube.com/watch?v=tG3h_ie6K6E&feature=youtu.be&t=1m24s">Selling Digital Goods for Ethereum With Quantum Potato Software</a>
+        Presentation
         </div>
 
         <div>
