--- a/index.html
+++ b/index.html
@@ -21,25 +21,33 @@ a {
         
         <h2>Crypto</h2>
         <div>
-        <a href="https://www.youtube.com/watch?v=tG3h_ie6K6E&feature=youtu.be&t=1m24s">Selling Digital Goods for Ethereum With Quantum Potato Software</a>
-        Presentation
+        <a href="https://www.youtube.com/watch?v=tG3h_ie6K6E&feature=youtu.be&t=1m24s">Selling Digital Goods for Ethereum With Quantum Potato Software</a>: Presentation
         </div>
 
         <div>
-        <a href="https://www.npmjs.com/package/eth-auth">npm eth-auth:</a> Validate a user has control of their Ethereum address by decoding their signing of an authentication token.
+        <a href="https://www.npmjs.com/package/eth-auth">npm eth-auth</a>: Validate a user has control of their Ethereum address by decoding their signing of an authentication token.
         </div>
 
         <div>
-        <a href="https://www.npmjs.com/package/eth-lawyer">npm eth-lawyer:</a> Detect Metamask login, logout & Conveniently interact with Ethereum Smart Contracts.
+        <a href="https://www.npmjs.com/package/eth-lawyer">npm eth-lawyer</a>: Detect Metamask login, logout & Conveniently interact with Ethereum Smart Contracts.
+        </div>
 
-        <a href="https://github.com/quantumproductions/private-dice">Private Dice: Roll 6 sided dice to securely generate Bitcoin private key.</a>
+        <div>
+        <a href="https://github.com/quantumproductions/private-dice">Private Dice</a>: Roll 6 sided dice to securely generate Bitcoin private key.
+        </div>
 
-        <a href="https://github.com/QuantumProductions/ethereum-audits">Ethereum Audits: Notes from auditing Smart Contracts</a>
+        <div>
+        <a href="https://github.com/QuantumProductions/ethereum-audits">Ethereum Audits</a>: Notes from auditing Smart Contracts
+        </div>
 
-        <a href="https://github.com/QuantumProductions/treasure-hunt-eth">Treasure Hunt Eth: Smart Contract Puzzle Template + Vulnerability Example</a>
+        <div>
+        <a href="https://github.com/QuantumProductions/treasure-hunt-eth">Treasure Hunt Eth</a>: Smart Contract Puzzle Template + Vulnerability Example
+        </div>
 
-        <a href="https://github.com/QuantumProductions/SCHAIN/raw/master/SCHAIN.pdf">SCHAIN: Whitepaper: Fully automated Supply Chain management</a>
-
+        <div>
+        <a href="https://github.com/QuantumProductions/SCHAIN/raw/master/SCHAIN.pdf">SCHAIN</a>: Whitepaper: Fully automated Supply Chain management
+         </div>
+        
         <p>Private Client Research: Statistical Analysis Automated Trading Bot</p>
 
         <p>Private Client Research: Multi-Currency Pool Managed Miner Configuration</p>
