--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@ a {
         <a href="https://github.com/QuantumProductions/SCHAIN/raw/master/SCHAIN.pdf">SCHAIN</a>: Whitepaper: Fully automated Supply Chain management
          </div>
 
-        <p>Private Client Research: Statistical Analysis Automated Trading Bot</p>
+        <div>Private Client Research: Statistical Analysis Automated Trading Bot</div>
 
-        <p>Private Client Research: Multi-Currency Pool Managed Miner Configuration</p>
+        <div>Private Client Research: Multi-Currency Pool Managed Miner Configuration</div>
 
-        <p>Private Client Research: Smart Contract Investor Payout Systems</p>
+        <div>Private Client Research: Smart Contract Investor Payout Systems</div>
 
         <h2>Games</h2>
 
