--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ a {
         <br/>
         <h3>WizardWars.IO</h3>
         
-        <p>Multiplayer Roguelike Deathmatch. 1second/Turn. Collaboration with R. Robert Holmes.</p>
+        <p>Multiplayer Roguelike Deathmatch. 1second/Turn. Collaboration with R. Riley Holmes.</p>
         
         <a href="http://wizardwars.io/">Web</a>
         <br/>
