--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ a {
         <h1>Quantum Productions</h1>
 
         <h2>About</h2>
-        
+        <div>Full-stack developer since 2008.</div>
         <div>
         <a href="https://www.linkedin.com/in/anthony-broussard-49a173133/">Linked In</a>
         </div>
