--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ a {
         
         <h2>Crypto</h2>
         <div>
-        <a href="https://www.youtube.com/watch?v=tG3h_ie6K6E&feature=youtu.be&t=1m24s">Selling Digital Goods for Ethereum</a>: Presentation
+        <a href="https://www.youtube.com/watch?v=tG3h_ie6K6E&feature=youtu.be&t=1m24s">Selling Digital Goods for Ethereum</a>: Presentation.
         </div>
 
         <div>
@@ -37,22 +37,22 @@ a {
         </div>
 
         <div>
-        <a href="https://github.com/QuantumProductions/ethereum-audits">Ethereum Audits</a>: Notes from auditing Smart Contracts
+        <a href="https://github.com/QuantumProductions/ethereum-audits">Ethereum Audits</a>: Notes from auditing Smart Contracts.
         </div>
 
         <div>
-        <a href="https://github.com/QuantumProductions/treasure-hunt-eth">Treasure Hunt Eth</a>: Smart Contract Puzzle Template + Vulnerability Example
+        <a href="https://github.com/QuantumProductions/treasure-hunt-eth">Treasure Hunt Eth</a>: Smart Contract Puzzle Template + Vulnerability Example.
         </div>
 
         <div>
-        <a href="https://github.com/QuantumProductions/SCHAIN/raw/master/SCHAIN.pdf">SCHAIN</a>: Whitepaper: Fully automated Supply Chain management
+        <a href="https://github.com/QuantumProductions/SCHAIN/raw/master/SCHAIN.pdf">SCHAIN</a>: Whitepaper: Fully automated Supply Chain management.
          </div>
 
-        <div>Private Client Research: Statistical Analysis Automated Trading Bot</div>
+        <div>Private Client Research: Statistical Analysis Automated Trading Bot.</div>
 
-        <div>Private Client Research: Multi-Currency Pool Managed Miner Configuration</div>
+        <div>Private Client Research: Multi-Currency Pool Managed Miner Configuration.</div>
 
-        <div>Private Client Research: Smart Contract Investor Payout Systems</div>
+        <div>Private Client Research: Smart Contract Investor Payout Systems.</div>
 
         <h2>Games</h2>
 
