--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ a {
         <br/>
 
         <h3>In Development</h3>
-        <a href="https://github.com/quantumproductions/tunnel">Makeway.Online</a>: Abstract 2P Strategy Game. Erlang + Javascript.
+        <a href="https://github.com/quantumproductions/tunnel">Makeway.Online</a>: Digital Board Game. Erlang + Javascript.
 
     </div>
 </div>
